Some updates. See below
- New message on top when process is running.
- Updated description message.
- Remote Site button within borders.
- New classes to launch time shifting out of the page.
- Creation of permission sets for all available fields in Tasks and Events.

--- a/src/classes/SF_MetadataUtils.cls
+++ b/src/classes/SF_MetadataUtils.cls
@@ -254,8 +254,8 @@ public with sharing class SF_MetadataUtils {
         aciuProfile.tabVisibilities = aciuTvs;
         MetadataService.ProfileFieldLevelSecurity aciuFLS = new MetadataService.ProfileFieldLevelSecurity();
         aciuFLS.field = fieldFullName;
-        aciuFLS.readable = true;
-        aciuFLS.editable = false;
+        //aciuFLS.readable = true;
+        aciuFLS.editable = true;
         aciuProfile.FieldPermissions = new MetadataService.ProfileFieldLevelSecurity[] { aciuFLS } ;
 
         results = service.upsertMetadata(
