--- a/src/classes/WaveMetadataApplicationObject.cls
+++ b/src/classes/WaveMetadataApplicationObject.cls
@@ -5,6 +5,7 @@ public class WaveMetadataApplicationObject {
     public String externalIdPrefix;
 	public String metadataUrl;
 	public List<String> dateFieldsToShift;
+	public List<String> stdFieldsForPermissionSet;
 	public List<WaveMetadataApplicationObject> children;
 	public List<WaveMetadataApplicationObjectRelation> relations;
 	public List<WaveRecordTypeItem> recordTypes;
